--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+  font-family: "Futurina";
+  src: url("./assets/fonts/Futurina.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Noto-Sans";
+  src: url("./assets/fonts/NotoSans-VariableFont_wdth,wght.ttf")
+    format("truetype");
+}
+
+@font-face {
+  font-family: "Krona-One";
+  src: url("./assets/fonts/KronaOne-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("./assets/fonts/Poppins-Regular.ttf") format("truetype");
+}
