desktop and Ipad stying completed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,18 +15,19 @@
         </div>
 
         <div class="top-text-box">
-            <h2 class="top-text-heading">Guardians of
-                the Galactic Tapestry</h2>
+            <h2 class="top-text-heading">Guardians of </h2>
+            <h2 class="top-text-heading"> the Galactic Tapestry</h2>
             <h3 class="top-text-description">Embark on an otherworldly journey
                 with Cosmic Creatures, the original architects of the universe
                 and
-                guardians of galaxies.
+                guardians of galaxies.</h3>
 
-                Each NFT in this creative project is a testament to ancient
+            <h3 class="top-text-description"> Each NFT in this creative project
+                is a testament to ancient
                 cosmic
                 artistry, inviting you to become a custodian of the grand
-                narrative.
-
+                narrative.</h3>
+            <h3 class="top-text-description">
                 Secure your link to the cosmic grid, own a piece of creative
                 genesis, and join a community of cosmic explorers. Explore the
                 cosmos, ignite your creativity, and embrace the timeless allure
