--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,7 +3,7 @@ $small-screen-end: 650px;
 $medium-screen-start: 650px;
 $medium-screen-end: 1200px;
 $large-screen-start: 1200px;
-$large-screen-end: 3000px;
+$large-screen-end: 6000px;
 
 @mixin respond-to($size) {
   @if $size == small {
@@ -16,10 +16,6 @@ $large-screen-end: 3000px;
     }
   } @else if $size == large {
     @media (min-width: $large-screen-start) and (max-width: $large-screen-end) {
-      @content;
-    }
-  } @else if $size == extra-large {
-    @media (min-width: $extra-large-screen-start) and (max-width: $extra-large-screen-end) {
       @content;
     }
   }
@@ -35,10 +31,12 @@ $large-screen-end: 3000px;
 
   @include respond-to(medium) {
     height: 3000px;
+    width: auto;
   }
 
   @include respond-to(large) {
     height: 5300px;
+    width: auto;
   }
 }
 
@@ -55,11 +53,11 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
-    height: 3000px;
+    height: 1100px;
   }
 
   @include respond-to(large) {
-    height: 5300px;
+    height: 1800px;
   }
 }
 
@@ -92,20 +90,22 @@ $large-screen-end: 3000px;
 
   @include respond-to(medium) {
     font-weight: 700;
-    font-size: 25px;
-    width: 10%;
-    height: 2%;
-    left: 87%;
-    top: 32px;
+    font-size: 20px;
+    border-radius: 10px;
+    width: 150px;
+    height: 50px;
+    right: 15px;
+    top: 22px;
   }
 
   @include respond-to(large) {
     font-weight: 700;
-    font-size: 25px;
-    width: 10%;
-    height: 2%;
-    left: 87%;
-    top: 32px;
+    font-size: 20px;
+    border-radius: 10px;
+    width: 220px;
+    height: 75px;
+    right: 15px;
+    margin-top: 30px;
   }
 }
 
@@ -120,20 +120,19 @@ $large-screen-end: 3000px;
   left: 0;
 
   @include respond-to(small) {
-    width: 300px; // Full width on small screens
+    width: 300px;
     top: 42px;
   }
 
   @include respond-to(medium) {
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 600px;
+    top: 20px;
   }
 
   @include respond-to(large) {
-    position: absolute;
-    top: auto;
-    left: 0;
+    width: 1298px;
+    height: 1148px;
+    left: 0px;
   }
 }
 
@@ -143,22 +142,22 @@ $large-screen-end: 3000px;
   @include respond-to(small) {
     width: 195px;
     height: 107px;
-    right: 8px;
+    right: 8%;
     top: 10%;
   }
 
   @include respond-to(medium) {
-    width: 641px;
-    height: 214px;
-    left: 20%;
-    top: 25%;
+    width: 320px;
+    height: 150px;
+    right: 220px;
+    top: 10%;
   }
 
   @include respond-to(large) {
-    width: 641px;
-    height: 214px;
-    left: 20%;
-    top: 25%;
+    width: 30%;
+    height: 15%;
+    top: 7%;
+    right: 22%;
   }
 }
 
@@ -180,16 +179,26 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    font-family: "Futurina", sans-serif;
+    font-style: normal;
+    font-weight: 250;
+    font-size: 65px;
+    line-height: 55px;
+    color: #ffffff;
   }
 
   @include respond-to(large) {
+    font-family: "Futurina", sans-serif;
+    font-style: normal;
+    font-weight: 350;
+    font-size: 120px;
+    line-height: 120px;
+    color: #ffffff;
   }
 }
 
 .top-image {
   position: absolute;
-  width: 100%;
-  height: 1620px;
   z-index: 0;
 
   @include respond-to(small) {
@@ -198,11 +207,13 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
-    width: 150%; // 75% width on medium screens
+    width: 100%;
+    height: 850px;
   }
 
   @include respond-to(large) {
     width: 100%; // 50% width on large screens
+    height: 1900px;
   }
 }
 
@@ -212,21 +223,19 @@ $large-screen-end: 3000px;
     width: 320px;
     height: 124px;
     margin-top: 380px;
-    //push div down 200px
   }
 
   @include respond-to(medium) {
-    width: 50%;
-    height: 124px;
-    left: 25%;
-    top: 1305px;
+    width: 550px;
+    height: 320px;
+    margin-top: 750px;
   }
 
   @include respond-to(large) {
     width: 50%;
     height: 124px;
     left: 25%;
-    top: 1305px;
+    margin-top: 1200px;
   }
 }
 
@@ -245,8 +254,8 @@ $large-screen-end: 3000px;
     font-family: "Krona-One";
     font-style: normal;
     font-weight: 400;
-    font-size: 40px;
-    line-height: 50px;
+    font-size: 30px;
+    line-height: 30px;
     text-align: center;
     color: #ffffff;
   }
@@ -281,8 +290,8 @@ $large-screen-end: 3000px;
     font-family: "Krona-One";
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 10px;
+    line-height: 18px;
     text-align: center;
     color: #ffffff;
   }
@@ -307,20 +316,15 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
-    height: 3000px;
+    height: 400px;
   }
 
   @include respond-to(large) {
-    height: 5300px;
+    height: 1000px;
   }
 }
 
 .avatar-example-image-container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px;
-  gap: 67px;
   z-index: 1;
 
   @include respond-to(small) {
@@ -333,9 +337,19 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    display: flex;
+    flex-direction: row; // Align children vertically
+    text-align: center;
+    justify-content: center;
+    gap: 40px;
   }
 
   @include respond-to(large) {
+    display: flex;
+    flex-direction: row; // Align children vertically
+    text-align: center;
+    justify-content: center;
+    gap: 40px;
   }
 }
 
@@ -346,9 +360,13 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    width: 230px; // Set width of images
+    height: 230px;
   }
 
   @include respond-to(large) {
+    width: 300px; // Set width of images
+    height: 300px;
   }
 }
 
@@ -362,9 +380,90 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    position: absolute;
+    width: 450px;
+    height: 680px;
+    right: 30px;
+    top: 150px;
   }
 
   @include respond-to(large) {
+    position: absolute;
+    width: 55%;
+    height: 55%;
+    right: 8%;
+    top: 22%;
+  }
+}
+
+.blue-creature-text-box {
+  position: absolute;
+  z-index: 1;
+  @include respond-to(small) {
+    width: 180px;
+    height: auto;
+    left: 18px;
+    top: 780px;
+  }
+
+  @include respond-to(medium) {
+    width: 400px;
+    height: auto;
+    left: 20px;
+    top: 850px;
+  }
+
+  @include respond-to(large) {
+    width: 575px;
+    height: auto;
+    left: 5%;
+    top: 145%;
+  }
+}
+
+.blue-creature-text-box-heading {
+  font-family: "Krona-One";
+  font-style: normal;
+  color: #ffffff;
+  @include respond-to(small) {
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 10px;
+  }
+
+  @include respond-to(medium) {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  @include respond-to(large) {
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+
+.blue-creature-description-text-box {
+  font-family: "Poppins";
+  font-style: normal;
+  color: #ffffff;
+  @include respond-to(small) {
+    font-weight: 200;
+    font-size: 6px;
+    line-height: 10px;
+  }
+
+  @include respond-to(medium) {
+    font-weight: 200;
+    font-size: 13px;
+    line-height: 28px;
+  }
+
+  @include respond-to(large) {
+    font-weight: 220;
+    font-size: 18px;
+    line-height: 28px;
   }
 }
 
@@ -378,15 +477,26 @@ $large-screen-end: 3000px;
     margin-top: 200px;
     display: flex;
     height: 150px;
-    justify-content: center; // Center children along the main axis (vertically)
-    align-items: center; // Center children along the cross axis (horizontally)
-    gap: 10px; // Spacing between images
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
 
   @include respond-to(medium) {
+    display: flex;
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
 
   @include respond-to(large) {
+    display: flex;
+    height: 150px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 3.5%;
   }
 }
 
@@ -411,9 +521,19 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    font-weight: 650;
+    font-size: 25px;
+    line-height: 22px;
+    width: 200px;
+    height: 60px;
   }
 
   @include respond-to(large) {
+    font-weight: 650;
+    font-size: 25px;
+    line-height: 22px;
+    width: 300px;
+    height: 80px;
   }
 }
 
@@ -422,23 +542,45 @@ $large-screen-end: 3000px;
   transform: translateY(3px);
 }
 .middle-image-container {
-  position: absolute;
-
   @include respond-to(small) {
+    position: absolute;
     top: 580px;
     height: 800px;
+    width: 100%;
   }
 
   @include respond-to(medium) {
+    position: absolute;
+    top: 580px;
+    height: 1000px;
+    width: 100%;
   }
 
   @include respond-to(large) {
+    position: absolute;
+    height: 2300px;
+    width: 100%;
+    top: 55%;
   }
 }
 
 .middle-image {
-  z-index: 0;
-  width: 100%;
+  @include respond-to(small) {
+    z-index: 0;
+    width: 100%;
+  }
+
+  @include respond-to(medium) {
+    z-index: 0;
+    width: 100%;
+    height: 1200px;
+  }
+
+  @include respond-to(large) {
+    z-index: 0;
+    width: 100%;
+    height: 2300px;
+  }
 }
 
 .lower-mid-text-box {
@@ -455,6 +597,8 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(large) {
+    height: 124px;
+    margin-top: 250px;
   }
 }
 
@@ -527,75 +671,26 @@ $large-screen-end: 3000px;
   }
 }
 
-.blue-creature-text-box {
-  position: absolute;
-  z-index: 1;
-  @include respond-to(small) {
-    width: 180px;
-    height: auto;
-    left: 18px;
-    top: 780px;
-  }
-
-  @include respond-to(medium) {
-  }
-
-  @include respond-to(large) {
-  }
-}
-
-.blue-creature-text-box-heading {
-  font-family: "Krona-One";
-  font-style: normal;
-  color: #ffffff;
-  @include respond-to(small) {
-    font-weight: 400;
-    font-size: 9px;
-    line-height: 10px;
-  }
-
-  @include respond-to(medium) {
-  }
-
-  @include respond-to(large) {
-  }
-}
-
-.blue-creature-description-text-box {
-  font-family: "Poppins";
-  font-style: normal;
-  color: #ffffff;
-  @include respond-to(small) {
-    font-weight: 200;
-    font-size: 6px;
-    line-height: 10px;
-  }
-
-  @include respond-to(medium) {
-  }
-
-  @include respond-to(large) {
-  }
-}
-
 .bottom-container {
   display: flex;
   justify-content: center;
   position: relative;
   width: 100%;
-  top: 300px;
 
   z-index: 1;
   @include respond-to(small) {
     height: 500px;
+    top: 300px;
   }
 
   @include respond-to(medium) {
-    height: 3000px;
+    height: 800px;
+    top: 300px;
   }
 
   @include respond-to(large) {
-    height: 5300px;
+    top: 25%;
+    height: 1000px;
   }
 }
 
@@ -610,9 +705,17 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    margin-top: 700px;
+    font-weight: 200;
+    line-height: 10px;
+    width: 600px;
   }
 
   @include respond-to(large) {
+    margin-top: 12%;
+    font-weight: 200;
+    line-height: 25px;
+    width: 46%;
   }
 }
 .join-community-heading {
@@ -628,9 +731,16 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    font-weight: 200;
+    font-size: 18px;
+    line-height: 10px;
   }
 
   @include respond-to(large) {
+    font-weight: 200;
+    font-size: 25px;
+    line-height: 30px;
+    margin-bottom: 50px;
   }
 }
 .join-community-description {
@@ -649,9 +759,15 @@ $large-screen-end: 3000px;
   }
 
   @include respond-to(medium) {
+    font-weight: 200;
+    font-size: 12px;
+    line-height: 20px;
   }
 
   @include respond-to(large) {
+    font-weight: 200;
+    font-size: 20px;
+    line-height: 28px;
   }
 }
 
@@ -662,12 +778,19 @@ $large-screen-end: 3000px;
     width: 320px;
     height: 60px;
     width: 300px;
+    margin-top: 550px;
   }
 
   @include respond-to(medium) {
+    width: 640px;
+    height: 60px;
+    margin-top: 950px;
   }
 
   @include respond-to(large) {
+    width: 850px;
+    height: 60px;
+    margin-top: 800px;
   }
 }
 
@@ -677,16 +800,23 @@ $large-screen-end: 3000px;
   font-weight: 400;
   font-size: 8px;
   line-height: 10px;
-
   color: #ffffff;
   @include respond-to(small) {
-    margin-top: 550px;
+    font-weight: 400;
+    font-size: 8px;
+    line-height: 10px;
   }
 
   @include respond-to(medium) {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
   }
 
   @include respond-to(large) {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
   }
 }
 
@@ -694,16 +824,16 @@ $large-screen-end: 3000px;
   position: absolute;
   z-index: 1;
   @include respond-to(small) {
-    font-weight: 200;
-    font-size: 6px;
     line-height: 10px;
     margin-top: 680px;
   }
 
   @include respond-to(medium) {
+    margin-top: 1050px;
   }
 
   @include respond-to(large) {
+    margin-top: 1000px;
   }
 }
 
