--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -8,7 +8,7 @@ Buttons.
 @layer components {
   .btn {
     // TODO: Add font-body, text-18 to here once its setup
-    @apply  inline-block py-3 px-7 rounded-full text-center cursor-pointer transition duration-200 ease-in-out appearance-none font-medium;
+    @apply h-max inline-block py-3 px-7 rounded-lg text-center cursor-pointer transition duration-200 ease-in-out appearance-none font-medium;
     position: relative;
 
     &:focus {
