--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -2,7 +2,6 @@
 Buttons.
 */
 
-// TODO: Get a few variations of the primary purple to use for hover/active/focus states
 // TODO: Setup font.scss
 
 @layer components {
@@ -13,10 +12,9 @@ Buttons.
 
     &:focus {
       @apply outline outline-2 outline-grey-500 outline-offset-2;
-
       &::before {
         content: "";
-        @apply absolute top-0 right-0 bottom-0 left-0 outline outline-2 outline-grey-100 rounded-full z-0;
+        @apply absolute top-0 right-0 bottom-0 left-0 outline outline-2 outline-grey-100 rounded-lg z-0;
       }
     }
 
@@ -24,11 +22,11 @@ Buttons.
       @apply bg-purple text-white;
 
       &:hover {
-        @apply bg-black;
+        @apply bg-purple-600;
       }
 
       &:active {
-        @apply bg-black;
+        @apply bg-purple-600;
       }
 
       &-disabled,
@@ -40,19 +38,3 @@ Buttons.
     }
   }
 }
-
-//z-index: 1;
-//display: flex;
-//flex-direction: row;
-//justify-content: center;
-//align-items: center;
-//user-select: none;
-//position: absolute;
-//background: #4647c5;
-//font-family: "Noto-Sans";
-//font-style: normal;
-//line-height: 22px;
-//color: #ffffff;
-//flex: none;
-//flex-grow: 0;
-//text-align: center;
