003: move font into font.scs

--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,1 +1,20 @@
-// TODO: Add website fonts here
+@font-face {
+  font-family: "Futurina";
+  src: url("../fonts/Futurina.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Noto-Sans";
+  src: url("../fonts/NotoSans-VariableFont_wdth,wght.ttf")
+  format("truetype");
+}
+
+@font-face {
+  font-family: "Krona-One";
+  src: url("../fonts/KronaOne-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Regular.ttf") format("truetype");
+}
