003: Refactor buttons to use new .btn class

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="main-container">
 
   <div class="top-container">
-    <div type="button" class="connect-wallet">Connect Wallet</div>
-    <div type="button" class="btn btn-primary z-10">
-      Test Button
+    <div type="button" class="btn btn-primary btn-lg z-10">
+      Connect Wallet
     </div>
     <img src="../assets/images/Frame 8 (2).png"
          alt="Cosmic Creatures Top Image"
@@ -45,10 +44,8 @@
       <img class="avatar-image" src="../assets/images/Frame 6.png" alt>
     </div>
 
-    <div class=join-discord-btn-container>
-      <div type="button"
-           class="join-discord">Join Discord
-      </div>
+    <div type="button" class="btn btn-primary btn-lg z-10">
+      Join Discord
     </div>
     <div class="lower-mid-text-box">
       <h1 class="lower-mid-heading">Limited Edition Stardust, Infinite
