--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -1,3 +1,5 @@
+// TODO: Too many different fonts here
+
 @font-face {
   font-family: "Futurina";
   src: url("../fonts/Futurina.otf") format("opentype");
