--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -1,7 +1,7 @@
 /*
 Buttons.
 */
-
+// Create a button component with the correct attributes
 @layer components {
   .btn {
     @apply font-lead text-18 relative h-max inline-block py-3 px-7 rounded-lg text-center cursor-pointer transition duration-200 ease-in-out appearance-none font-medium;
