--- a/src/app/includes/cards/avatar/avatar.component.html
+++ b/src/app/includes/cards/avatar/avatar.component.html
@@ -1,3 +1,4 @@
+<!-- TODO: Make alt dynamic -->
 <div class="max-w-md p-4 rounded-lg overflow-hidden">
   <img [src]="imageUrl" alt="My Image" class="w-80 h-auto">
 </div>
