003: Finishing moving everything over into tailwind. Needs touch ups

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,125 +1,123 @@
-<div class="main-container">
+<div class="">
 
-  <div class="top-container">
-    <div type="button" class="btn btn-primary btn-lg z-10">
-      Connect Wallet
-    </div>
-    <img src="../assets/images/Frame 8 (2).png"
-         alt="Cosmic Creatures Top Image"
-         class="top-image">
-    <img src="../assets/images/pink-creature.png"
-         alt="Cosmic Creatures Pink Creature" class="pink-creature">
+  <section class="bg-cover bg-no-repeat"
+           style="background-image: url('../assets/images/Frame 8 (2).png')">
 
-    <div class="main-heading-container">
-      <h1 class="main-heading">Cosmic Creatures</h1>
-    </div>
+    <div class="flex">
+      <div class="w-1/2">
+        <img src="../assets/images/pink-creature.png" alt="Cosmic Creatures Pink Creature">
+      </div>
 
-    <div class="top-text-box">
-      <h2 class="top-text-heading">Guardians of </h2>
-      <h2 class="top-text-heading"> the Galactic Tapestry</h2>
-      <h3 class="top-text-description">Embark on an otherworldly journey
-        with Cosmic Creatures, the original architects of the universe
-        and
-        guardians of galaxies.</h3>
 
-      <h3 class="top-text-description"> Each NFT in this creative project
-        is a testament to ancient
-        cosmic
-        artistry, inviting you to become a custodian of the grand
-        narrative.</h3>
-      <h3 class="top-text-description">
-        Secure your link to the cosmic grid, own a piece of creative
-        genesis, and join a community of cosmic explorers. Explore the
-        cosmos, ignite your creativity, and embrace the timeless allure
-        of
-        the Cosmic Creatures NFT project.</h3>
-    </div>
-
-  </div>
-
-  <div class="middle-container">
-    <div class="flex flex-col md:flex-row justify-between">
-      <div *ngFor="let avatar of avatars">
-        <app-avatar  [imageUrl]="avatar.image"></app-avatar>
+      <div class="w-1/2 text-white">
+        <div class="flex flex-col items-end">
+          <div type="button" class="btn btn-primary btn-lg z-10">
+            Connect Wallet
+          </div>
+          <h1 class="type-display">Cosmic Creatures</h1>
+        </div>
       </div>
     </div>
 
-    <div type="button" class="btn btn-primary btn-lg z-10">
-      Join Discord
-    </div>
-    <div class="lower-mid-text-box">
-      <h1 class="lower-mid-heading">Limited Edition Stardust, Infinite
-        Journeys</h1>
-      <h3 class="mid-mid-description">Seize the opportunity to capture a
-        fragment of eternity.
 
-      </h3>
-      <h3 class="mid-lower-description">The Cosmic Creatures Collection
-        awaits, where the dance of stars
-        becomes a timeless journey.</h3>
-    </div>
+    <div class="flex flex-col items-center">
+      <div class="text-center w-3/4">
+        <h2 class="type-h2">Guardians of the Galactic Tapestry </h2>
 
-    <div class="blue-creature-text-box">
-      <h1 class="blue-creature-text-box-heading">Embodied Stardust:
-        A Timeless Elegance
-      </h1>
-      <h3 class="blue-creature-description-text-box">Stellar Origins:
-        Fashioned from the raw materials of the cosmos,
-        each Cosmic Creature is a testament to the beauty of celestial
-        birth.</h3>
-      <h3 class="blue-creature-description-text-box">Timeless Drift: As
-        entities beyond time, these ethereal beings
-        gracefully navigate the cosmic currents, their existence an
-        ever-flowing melody.</h3>
-      <h3 class="blue-creature-description-text-box">Etheric Stories: Own
-        a
-        piece of the universe's narrative, as each
-        Creature carries with it a tale woven into the fabric of
-        galaxies.</h3>
-    </div>
-    <div class="middle-image-container">
-      <img class="blue-creature"
-           src="../assets/images/blue-creature.png"
-           alt="Blue Creature">
-      <img src="../assets/images/middle-background-img.png"
-           alt="Cosmic Creatures Middle Image" class="middle-image">
+        <h3 class="type-lead">
+          Embark on an otherworldly journey with Cosmic Creatures, the original architects of the universe and guardians
+          of galaxies.
+          Each NFT in this creative project is a testament to ancient cosmic artistry, inviting you to become a
+          custodian
+          of the grand narrative.
+          Secure your link to the cosmic grid, own a piece of creative genesis, and join a community of cosmic
+          explorers.
+          Explore the cosmos, ignite your creativity, and embrace the timeless allure of the Cosmic Creatures NFT
+          project.
+        </h3>
+        <div>
+          <div class="flex flex-col md:flex-row justify-between">
+            <div *ngFor="let avatar of avatars">
+              <app-avatar [imageUrl]="avatar.image"></app-avatar>
+            </div>
+          </div>
+
+          <div type="button" class="btn btn-primary btn-lg z-10">
+            Join Discord
+          </div>
+        </div>
+      </div>
+
+
     </div>
 
-  </div>
 
-  <div class="bottom-container">
-    <div class="join-community-text-box">
-      <h1 class="join-community-heading">Join the Community</h1>
-      <h3 class="join-community-description">Celestial Exploration:
-        Immerse
-        yourself in the Cosmic Creatures Collection, where the stories
-        of
-        the stars come to life.</h3>
-      <h3 class="join-community-description">Connect with the Cosmos: Link
-        your wallet to the cosmic grid and embrace the ethereal
-        connection
-        to the original essence of time.</h3>
-      <h3 class="join-community-description">Harvest Stardust: Choose your
-        Cosmic Creature and become a custodian of the celestial
-        heritage, a
-        keeper of stories untold.</h3>
+  </section>
+
+  <section class="bg-cover bg-no-repeat h-full" style="background-image: url('../assets/images/Frame 8 (2).png')">
+    <div class="flex flex-col">
+      <h2 class="type-h2">Limited Edition Stardust, Infinite
+        Journeys</h2>
+
+      <p class="type-lead">
+        Seize the opportunity to capture a fragment of eternity. The Cosmic Creatures Collection awaits, where the dance
+        of stars becomes a timeless journey.
+      </p>
     </div>
 
-    <div class="footer-text-box">
-      <h2 class="footer-text">From stardust to eternity. Explore the
-        cosmos.
-        Join the timeless journey of the Cosmic Creatures
-        Collection.</h2>
+    <div class="flex">
+      <div class="w-1/2">
+        <h2 class="type-h2">Embodied Stardust:
+          A Timeless Elegance
+        </h2>
+        <p class="type-lead">
+          Fashioned from the raw materials of the cosmos, each Cosmic Creature is a testament to the beauty of celestial
+          birth.
+        </p>
+        <p class="type-lead">Stellar Origins:
+        </p>
+        <p class="type-lead">Timeless Drift: As entities beyond time, these ethereal beings gracefully navigate the
+          cosmic
+          currents, their existence an ever-flowing melody.</p>
+        <p class="type-lead">Etheric Stories: Own a piece of the universe's narrative, as each Creature carries with it
+          a
+          tale woven into the fabric of galaxies.</p>
+      </div>
+      <div class="w-1/2">
+        <img class="" src="../assets/images/blue-creature.png" alt="Blue Creature">
+      </div>
+
     </div>
 
-    <div class="socials-icon-box">
-      <img class="socials-image" src="../assets/images/discord-icon.png"
-           alt="Twitter Icon">
-      <img class="socials-image" src="../assets/images/instagram-icon.png"
-           alt="Discord Icon">
-      <img class="socials-image" src="../assets/images/x-icon.png"
-           alt="Instagram Icon">
-    </div>
-  </div>
+    <footer class="container mx-auto">
+      <div class="flex flex-col text-center">
+        <h2 class="type-h2">Join the Community</h2>
+        <p class="type-p">Celestial Exploration: Immerse yourself in the Cosmic Creatures Collection, where the stories of the
+          stars come to life.</p>
+        <p class="type-p">Connect with the Cosmos: Link your wallet to the cosmic grid and embrace the ethereal connection to
+          the original essence of time.</p>
+        <p class="type-p">Harvest Stardust: Choose your Cosmic Creature and become a custodian of the celestial heritage, a
+          keeper of stories untold.</p>
+      </div>
+
+      <div class="flex flex-col items-center justify-center py-16">
+        <h3 class="type-h3 text-center">
+          From stardust to eternity. Explore the cosmos. Join the timeless journey of the Cosmic Creatures Collection.
+        </h3>
+        <div class="flex gap-x-7">
+          <img class="" src="../assets/images/discord-icon.png"
+               alt="Twitter Icon">
+          <img class="" src="../assets/images/instagram-icon.png"
+               alt="Discord Icon">
+          <img class="" src="../assets/images/x-icon.png"
+               alt="Instagram Icon">
+        </div>
+      </div>
+
+    </footer>
+  </section>
+
+
+
 
 </div>
