--- a/src/assets/scss/typography.scss
+++ b/src/assets/scss/typography.scss
@@ -1,46 +1,47 @@
-// TODO: Add fonts
-//@layer utilities {
-//  // display styles
-//  .type-display {
-//    @apply font-display font-medium leading-tight text-42 md:text-62 lg:text-72;
-//  }
-//
-//  // heading styles
-//  .type-h1 {
-//    @apply font-display font-medium leading-tight text-30 md:text-52 lg:text-62;
-//  }
-//
-//  .type-h2 {
-//    @apply font-display font-medium leading-snug text-28 sm:text-32 md:text-40;
-//  }
-//
-//  .type-h3 {
-//    @apply font-display font-normal leading-snug text-26 sm:text-28 md:text-30;
-//  }
-//
-//  .type-h4 {
-//    @apply font-display font-normal leading-snug text-22 md:text-26;
-//  }
-//
-//  // body styles
-//  .type-lead {
-//    @apply font-body font-normal text-20 md:text-26 leading-relaxed;
-//  }
-//
-//  .type-p {
-//    @apply font-body font-light text-18 md:text-20;
-//  }
-//
-//  .type-sm {
-//    @apply font-body font-light text-18;
-//  }
-//
-//  .type-xs {
-//    @apply font-body font-light text-13;
-//  }
-//
-//  .type-uppercase {
-//    @apply font-body uppercase leading-loose;
-//  }
-//
-//}
+@layer utilities {
+  // display styles
+  .type-display {
+    @apply font-display font-medium leading-tight text-42 md:text-62 lg:text-72;
+  }
+
+  // heading styles
+  //.type-h1 {
+  //  @apply font-lead font-medium leading-tight text-30 md:text-52 lg:text-62;
+  //}
+  //
+  .type-h2 {
+    @apply font-lead font-medium leading-snug text-28 sm:text-32 md:text-40;
+  }
+  .type-h3 {
+    @apply font-lead font-normal leading-snug text-26 sm:text-28 md:text-30;
+  }
+  //
+  //.type-h4 {
+  //  @apply font-lead font-normal leading-snug text-22 md:text-26;
+  //}
+
+  // body styles
+  .type-lead {
+    @apply font-body font-normal text-20 md:text-26 leading-relaxed;
+  }
+
+ .type-p {
+    @apply font-body font-light text-18 md:text-20;
+  }
+
+  .type-sm {
+    @apply font-body font-light text-18;
+  }
+
+  .type-xs {
+    @apply font-body font-light text-13;
+  }
+
+  .type-uppercase {
+    @apply font-body uppercase leading-loose;
+  }
+}
+
+body {
+  @apply text-white;
+}
