003: mobile - add gap between avatar images

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,7 +36,7 @@
           project.
         </h3>
         <div>
-          <div class="flex flex-col md:flex-row justify-between">
+          <div class="flex flex-col md:flex-row justify-between gap-y-11">
             <div *ngFor="let avatar of avatars">
               <app-avatar [imageUrl]="avatar.image"></app-avatar>
             </div>
